--- a/sp/templates/stock_list.html
+++ b/sp/templates/stock_list.html
@@ -8,6 +8,7 @@
       <tr>
         <th>Name</th>
         <th>Symbol</th>
+        <th>Current Value</th>
       </tr>
     </thead>
     <tbody>
@@ -15,6 +16,7 @@
         <tr>
           <td>{{ stock.name }}</td>
           <td>{{ stock.symbol }}</td>
+          <td>{{ stock.current_price }}</td>
         </tr>
       {% endfor %}
     </tbody>
