--- a/sp/templates/base.html
+++ b/sp/templates/base.html
@@ -10,6 +10,11 @@
     
 <a href="{% url 'stock_list' %}">stock list</a>
 <a href="{% url 'portfolio_list' %}">portfolio list</a>
+<a href="{% url 'register' %}">Register</a>
+<a href="{% url 'login' %}">Login</a>
+<a href="{% url 'forgot_password' %}">Forgot Password</a>
+<a href="{% url 'logout' %}">Log Out</a>
+{% comment %} <a href="{% url 'reset_password' %}">Reset Password</a> {% endcomment %}
     {% block content %}
     {% endblock content %}
 
