--- a/sp/templates/base.html
+++ b/sp/templates/base.html
@@ -1,23 +1,72 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  {% comment %} css styling {% endcomment %}
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+  {% comment %} js {% endcomment %}
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>  <title>{% block title %}{% endblock title %}</title>
 </head>
+
 <body>
-    
-<a href="{% url 'stock_list' %}">stock list</a>
-<a href="{% url 'portfolio_list' %}">portfolio list</a>
-<a href="{% url 'register' %}">Register</a>
-<a href="{% url 'login' %}">Login</a>
-<a href="{% url 'forgot_password' %}">Forgot Password</a>
-<a href="{% url 'logout' %}">Log Out</a>
-{% comment %} <a href="{% url 'reset_password' %}">Reset Password</a> {% endcomment %}
+
+  <nav class="navbar navbar-expand-lg " style="border-bottom-style: ridge;  border-bottom-color: #263A29; background-color: #013220;">
+    <div class="container-fluid">
+      <a class="navbar-brand text-light" href="/">FT<span class=" text-danger">9JA</span></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'stock_list' %}" class="nav-link  text-light" >Companies</a>
+
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'portfolio_list' %}"class="nav-link  text-light">portfolio list</a>
+
+          </li>
+          <li class="nav-item dropdown mx-3">
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style=" background-color: rgba(93, 156, 89,0.2); border-radius: 5px;">
+                Welcome, {{ request.user.username }}
+            </a>
+            <ul class="dropdown-menu" style="background-color: rgba(0, 0, 0, 0.5);">
+                <li><a href="{% url 'register' %}" style="background-color: rgba(0, 0, 0, 0.5);" class="dropdown-item text-light">Register</a></li>
+                <li><a href="{% url 'login' %}" style="background-color: rgba(0, 0, 0, 0.5);" class="dropdown-item text-light">Login</a></li>
+                <li><a href="{% url 'forgot_password' %}" style="background-color: rgba(0, 0, 0, 0.5);" class="dropdown-item text-light">Forgot Password</a></li>
+                <li><hr class="dropdown-divider" ></li>
+
+                <li><a href="{% url 'logout' %}" style="background-color: rgba(0, 0, 0, 0.5);" class="dropdown-item text-light">Log Out</a></li>
+            </ul>
+        </li>
+        
+        </ul>
+      </div>
+    </div>
+  </nav>
+<div class="container mt-2 mb-2" style="min-height: 120vh;">
+
     {% block content %}
     {% endblock content %}
 
+</div>
 
+  <footer style="border-top-style: ridge; border-top-color: #263A29; width: 100%; height: 5vh; background-color: black;">
+
+  </footer>
+
+
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
+
 </html>
