--- a/sp/templates/stock_list.html
+++ b/sp/templates/stock_list.html
@@ -2,23 +2,31 @@
 {% load static %}
 
 {% block content %}
-  <h1>Stock List</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Symbol</th>
-        <th>Current Value</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for stock in stocks%}
-        <tr>
-          <td>{{ stock.name }}</td>
-          <td>{{ stock.symbol }}</td>
-          <td>{{ stock.current_price }}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Companies</h1>
+      <hr>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Symbol</th>
+            <th>Current Value</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for stock in stocks%}
+            <tr>
+              <td>{{ stock.name }}</td>
+              <td>{{ stock.symbol }}</td>
+              <td>{{ stock.current_price }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    
+    </div>
+  </div>
+</div>
 {% endblock %}
