--- a/sp/templates/registration/forgot_password.html
+++ b/sp/templates/registration/forgot_password.html
@@ -1,15 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Forgot Password</h2>
-  {% if message %}
-    <p>{{ message }}</p>
-  {% endif %}
-  <form method="post">
-    {% csrf_token %}
-    <label for="email">Email:</label>
-    <input type="email" name="email" required>
-    <button type="submit">Reset Password</button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Forgot Password</h3>
+      {% if message %}
+        <p>{{ message }}</p>
+      {% endif %}
+      <form method="post">
+        {% csrf_token %}
+        <label for="email">Email:</label>
+        <input type="email" name="email" required>
+        <button type="submit" class="btn btn-success">Reset Password</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
   
