--- a/sp/templates/portfolio_detail.html
+++ b/sp/templates/portfolio_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load custom_filters %}
 
+{% block title %}Portfolio Detail{% endblock title %}
+
 {% block content %}
 <script src="{% static 'js/transaction.js' %}"></script>
 
