--- a/sp/templates/portfolio_list.html
+++ b/sp/templates/portfolio_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Portfolio List{% endblock title %}
+
 {% block content %}
 <div class="container">
   <div class="row">
@@ -8,27 +10,50 @@
       <h3>Portfolio List</h3>
       <hr style="color: red;">
       {% if user.is_authenticated %}
-        {% if user.is_superuser %}
-          <ul>
-            {% for portfolio in portfolios %}
-            <li>
-              <strong>Portfolio:</strong> {{ portfolio.name }}<br>
-              <strong>Owner:</strong> {{ portfolio.owner.username }}<br>
-              <a href="{% url 'portfolio_detail' portfolio.pk %}">View Details</a>
-            </li>
-            {% endfor %}
-          </ul>
+
+      {% if user.is_superuser %}
+      <button class="btn btn-success mx-3 my-3"><a href="{% url 'perform_stock_transaction' %}" class=" text-light" style="text-decoration: none;">Buy/Sell Stock</a></button>
+      <ul>
+        {% for portfolio in portfolios %}
+        <li>
+          <strong>Portfolio Name:</strong>
+          {{ portfolio.name }}<br>
+          <strong>Owner:</strong>
+          {{ portfolio.owner.username }}<br>
+          <a href="{% url 'portfolio_detail' portfolio.pk %}">View Details</a>
+        </li>
+        {% endfor %}
+      </ul>
+      {% else %}
+        {% if portfolios %}
+        <ul>
+          {% for portfolio in portfolios %}
+  
+          <p>You have N
+            {{ portfolio.wallet }} in your account
+          </p>
+          {% if portfolio.wallet > 0 %}
+          <button class="btn btn-success mx-3 my-3"><a href="{% url 'perform_stock_transaction' %}" class=" text-light" style="text-decoration: none;">Buy/Sell Stock</a></button>
+          {% else %}
+          <p>You have no money in your wallet. Kindly send a mail to egume02@gmail.com</p>
+          {% endif %}
+          <li>
+            <strong>Portfolio Name:</strong>
+            {{ portfolio.name }}<br>
+            <strong>Owner:</strong>
+            {{ portfolio.owner.username }}<br>
+            <a href="{% url 'portfolio_detail' portfolio.pk %}">View Details</a>
+          </li>
+          {% endfor %}
+        </ul>
+  
+
         {% else %}
-          <ul>
-            {% for portfolio in portfolios %}
-            <li>
-              <strong>Portfolio:</strong> {{ portfolio.name }}<br>
-              <strong>Owner:</strong> {{ portfolio.owner.username }}<br>
-              <a href="{% url 'portfolio_detail' portfolio.pk %}">View Details</a>
-            </li>
-            {% endfor %}
-          </ul>
+        
+          You have no portfolio created for your profile. kindly contact admin.
+        
         {% endif %}
+      {% endif %}
       {% endif %}
     </div>
   </div>
