--- a/sp/templates/registration/change_password.html
+++ b/sp/templates/registration/change_password.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
+{% block title %} Change Password{% endblock title %}
+
 {% block content %}
-  <h1>Change Password</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Change Password</button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Change Password</h3>
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-secondary">Change Password</button>
+      </form>
+    
+    </div>
+  </div>
+</div>
 {% endblock %}
