--- a/sp/templates/registration/register.html
+++ b/sp/templates/registration/register.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
 
+{% block title %}Register{% endblock title %}
+
 {% block content %}
-  <h2>Registration</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Registration</h3>
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-secondary">Register</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
