--- a/sp/templates/registration/reset_password.html
+++ b/sp/templates/registration/reset_password.html
@@ -1,11 +1,19 @@
 {% extends 'base.html' %}
 
+{% block title %}Reset Password{% endblock title %}
+
 {% block content %}
-  <h2>Reset Password</h2>
-  <form method="post">
-    {% csrf_token %}
-    <input type="password" name="password1" placeholder="New Password" required>
-    <input type="password" name="password2" placeholder="Confirm Password" required>
-    <button type="submit">Reset Password</button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Reset Password</h3>
+      <form method="post">
+        {% csrf_token %}
+        <input type="password" name="password1" placeholder="New Password" required>
+        <input type="password" name="password2" placeholder="Confirm Password" required>
+        <button type="submit" class="btn btn-secondary">Reset Password</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
