--- a/sp/templates/base.html
+++ b/sp/templates/base.html
@@ -9,10 +9,12 @@
 
   {% comment %} css styling {% endcomment %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
   {% comment %} js {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
   <title>{% block title %}{% endblock title %}</title>
 </head>
 
@@ -103,7 +105,8 @@
   </footer>
 
 
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="{% static 'js/base.js' %}"></script>
 </body>
 
 </html>
