--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,3 +6,40 @@ background-repeat: no-repeat;
 
 
 }
+#text h6{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    margin-bottom: 50px;
+}
+
+#join-btn{
+    width: 190px; 
+    background-color: #013220;
+    border: 2px; 
+    border-color: #fff;
+    margin-top: -60px !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(225, 225, 225, 0.3) 0px 30px 60px -30px, rgba(225, 225, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+
+.ml6 {
+    position: relative;
+    font-weight: 900;
+    font-size: 3.3em;
+  }
+  
+  .ml6 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.2em;
+    padding-right: 0.05em;
+    padding-bottom: 0.1em;
+    overflow: hidden;
+  }
+  
+  .ml6 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
