resolved the password reset issue

--- a/sp/templates/registration/forgot_password.html
+++ b/sp/templates/registration/forgot_password.html
@@ -9,11 +9,12 @@
       {% if message %}
         <p>{{ message }}</p>
       {% endif %}
+      <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
       <form method="post">
         {% csrf_token %}
         <label for="email">Email:</label>
         <input type="email" name="email" required>
-        <button type="submit" class="btn btn-success">Reset Password</button>
+        <button type="submit" class="btn btn-success">Send Email</button>
       </form>
     </div>
   </div>
