--- a/sp/templates/registration/reset_password.html
+++ b/sp/templates/registration/reset_password.html
@@ -7,10 +7,9 @@
   <div class="row">
     <div class="col">
       <h3>Reset Password</h3>
-      <form method="post">
+      <form method="POST">
         {% csrf_token %}
-        <input type="password" name="password1" placeholder="New Password" required>
-        <input type="password" name="password2" placeholder="Confirm Password" required>
+        {{form.as_p}}
         <button type="submit" class="btn btn-secondary">Reset Password</button>
       </form>
     </div>
