--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,13 +1,14 @@
 #picture{
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.05)),
     url('../images/grow.jpg');background-size: cover;
 background-repeat: no-repeat;
-
+background-position: center;
 
 }
 #text h6{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black !important;
     font-weight: lighter;
     font-size: 1.2rem;
     line-height: 2rem;
