--- a/sp/templates/base.html
+++ b/sp/templates/base.html
@@ -22,7 +22,7 @@
 
   <nav class="navbar navbar-expand-lg " style="border-bottom-style: ridge;  border-bottom-color: #263A29; background-color: #013220;">
     <div class="container-fluid">
-      <a class="navbar-brand text-light" href="/">FT<span class=" text-danger">9JA</span></a>
+      <a class="navbar-brand text-light fs-1" href="/" >Blaze<span class=" text-danger">Stocks</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -82,7 +82,7 @@
       </div>
     </div>
   </nav>
-  <div class="container mt-2 mb-2" style="min-height: 120vh;" >
+  <div class=" mt-2 mb-2" style="min-height: 120vh;" >
     <div id='messages'>
         {% if messages %}
         {% for message in messages %}
