--- a/sp/templates/index.html
+++ b/sp/templates/index.html
@@ -8,20 +8,26 @@
   <div class="row">
     <div class="col">
 
-      <div id="text">
-        <h6 class="ml6 text-light text-justify  mt-5">
-          <span class="text-wrapper">
-            <span class="letters">Welcome to our stock trading platform! We provide an intuitive and efficient solution for buying and selling stocks in the market. With our user-friendly interface and powerful tools, you can easily track your investments, analyze market trends, and make informed trading decisions. Whether you're a seasoned investor or just starting your journey in the world of stocks, our platform offers a seamless experience to help you achieve your financial goals. Join our community today and embark on a successful trading journey with us. 
-            </span>
+      <div id="text" class="mt-5 text-center" >
+
+            <h5 style="line-height: 2.7rem; font-family: Arial; font-weight: lighter !important;;" class=" text-light">Welcome to our stock trading platform! We provide an intuitive and efficient solution for buying and selling stocks in the market. With our user-friendly interface and powerful tools, you can easily track your investments, analyze market trends, and make informed trading decisions. Whether you're a seasoned investor or just starting your journey in the world of stocks, our platform offers a seamless experience to help you achieve your financial goals. Join our community today and embark on a successful trading journey with us. 
+            </h5>
+
+      </div> 
+
+      <div class="ml6  text-center mt-5" style="font-size: 2rem; text-shadow: 2px 2px 4px rgba(225, 225, 225, 0.5) !important;color: #013220 !important;
+      ">
+        <span class="text-wrapper">
+          <span class="letters">
+              <span class="text-light fw-light small-font" >Join Us Today</span>
           </span>
+        </span>
+          <p><a href="{% url 'register' %}" id="join-btn" class="btn btn-success">Here</a></p>
 
-        </h6>
       </div>
-
-
-      <div>
+      
+            
         
-        <a href="{% url 'register' %}" class="btn btn-lg " id="join-btn"><span class=" text-light fw-light">Join Us Today</a>
 
 
 
